--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "twitter-clone",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run server\" \"vite\"",
     "server": "cd server && nodemon app.js",
