--- a/package.json
+++ b/package.json
@@ -15,22 +15,35 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-rate-limit": "^7.2.0",
+    "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "multer": "^2.0.2",
+    "oauth": "^0.10.0",
+    "passport": "^0.7.0",
+    "passport-twitter": "^1.0.4",
+    "oauth": "^0.10.2",
+    "passport": "^0.7.0",
+    "passport-twitter": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "twitter-api-v2": "^1.17.2"
+    "twitter-api-v2": "^1.24.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
+    "@types/oauth": "^0.9.4",
+    "@types/passport": "^1.0.16",
+    "@types/passport-twitter": "^1.0.39",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/sqlite3": "^3.1.11",
@@ -42,7 +55,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "nodemon": "^3.1.0",
-   "postcss": "^8.4.35",
+    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
